App adapted to support different languages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
     <string name="app_name">QuickSOS</string>
+    <string name="welcome">¡Bienvenido!</string>
+    <string name="login">Iniciar sesión</string>
+    <string name="email_hint">Correo electrónico</string>
+    <string name="password_hint">Contraseña</string>
+    <string name="repeat_password_hint">Confirmar contraseña</string>
+    <string name="account_question">¿Aún no tienes una cuenta?</string>
+    <string name="create_account">Crear cuenta</string>
+    <string name="email_content_description">Campo para escribir el correo electrónico</string>
+    <string name="password_content_description">Campo para escribir la contraseña</string>
+    <string name="repeat_password_content_description">Campo para confirmar la contraseña</string>
+    <string name="two_empty_fields">Debe rellenar ambos campos</string>
+    <string name="three_empty_fields">Debe rellenar los 3 campos obligatorios</string>
+    <string name="email_empty">El campo de correo electrónico está vacío</string>
+    <string name="password_empty">El campo de contraseña está vacío</string>
+    <string name="repeat_password_empty">El campo de confirmar contraseña está vacío</string>
+    <string name="successful_login">Inicio de sesión exitoso</string>
+    <string name="failed_login">Error en la autenticación</string>
+    <string name="register_title">Registro</string>
+    <string name="register">Registrar</string>
+    <string name="invalid_email">Correo inválido</string>
+    <string name="short_password">La contraseña debe tener al menos 6 caracteres</string>
+    <string name="unmatched_password">Las contraseñas no coinciden</string>
+    <string name="successful_register">Usuario registrado correctamente</string>
+    <string name="email_in_use">Este correo ya está registrado</string>
+    <string name="failed_register">Error en el registro: </string>
 </resources>
