--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -28,4 +28,8 @@
     <string name="contacts">Contacts</string>
     <string name="personal_contacts">Personal contacts</string>
     <string name="others">Others</string>
+    <string name="call_confirmation_title">Confirm call</string>
+    <string name="call_question">Are you sure you want to call</string>
+    <string name="accept_call">Call</string>
+    <string name="cancel_call">Cancel</string>
 </resources>
