--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,8 +26,8 @@
     <string name="email_in_use">This email is already registered</string>
     <string name="failed_register">Registration error: </string>
     <string name="contacts">Contacts</string>
-    <string name="personal_contacts">Personal contacts</string>
-    <string name="others">Others</string>
+    <string name="personal_contacts">Personal</string>
+    <string name="others">More</string>
     <string name="call_confirmation_title">Confirm call</string>
     <string name="call_question">Are you sure you want to call</string>
     <string name="accept_call">Call</string>
