--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,86 +1,86 @@
 <resources>
     <string name="app_name">QuickSOS</string>
-    <string name="welcome">¡Bienvenido!</string>
-    <string name="login">Iniciar sesión</string>
-    <string name="email_hint">Correo electrónico</string>
-    <string name="password_hint">Contraseña</string>
-    <string name="repeat_password_hint">Repetir contraseña</string>
-    <string name="account_question">¿Aún no tienes una cuenta?</string>
-    <string name="create_account">Crear cuenta</string>
-    <string name="email_content_description">Campo para escribir el correo electrónico</string>
-    <string name="password_content_description">Campo para escribir la contraseña</string>
-    <string name="repeat_password_content_description">Campo para confirmar la contraseña</string>
-    <string name="two_empty_fields">Debe rellenar ambos campos</string>
-    <string name="three_empty_fields">Debe rellenar los 3 campos obligatorios</string>
-    <string name="email_empty">El campo de correo electrónico está vacío</string>
-    <string name="password_empty">El campo de contraseña está vacío</string>
-    <string name="repeat_password_empty">El campo de confirmar contraseña está vacío</string>
-    <string name="successful_login">Inicio de sesión exitoso</string>
-    <string name="failed_login">Error en la autenticación</string>
-    <string name="register_title">Registro</string>
-    <string name="register">Registrar</string>
-    <string name="invalid_email">Correo inválido</string>
-    <string name="short_password">La contraseña debe tener al menos 6 caracteres</string>
-    <string name="unmatched_password">Las contraseñas no coinciden</string>
-    <string name="successful_register">Usuario registrado correctamente</string>
-    <string name="email_in_use">Este correo ya está registrado</string>
-    <string name="failed_register">Error en el registro: </string>
-    <string name="contacts">Contactos</string>
-    <string name="personal_contacts">Personales</string>
-    <string name="others">Más</string>
-    <string name="call_confirmation_title">Confirmar llamada</string>
-    <string name="call_question">¿Estás seguro de que deseas llamar a</string>
-    <string name="accept_call">Llamar</string>
-    <string name="cancel_call">Cancelar</string>
-    <string name="add_contact">Añadir contacto</string>
-    <string name="name_required">Se necesita un nombre de contacto</string>
-    <string name="number_required">Se necesita un número de contacto</string>
-    <string name="successful_contact_added">Contacto añadido con éxito</string>
-    <string name="failed_contact_added">Error al añadir contacto</string>
-    <string name="add_new_contact">Añadir nuevo contacto</string>
-    <string name="contact_name">Nombre contacto</string>
-    <string name="phone_number">Número contacto</string>
-    <string name="image_url_optional">URL imagen (Opcional)</string>
-    <string name="save">Guardar</string>
-    <string name="cancel">Cancelar</string>
-    <string name="error_loading_contacts">Error al cargar los contactos</string>
-    <string name="delete_contact_title">Eliminar contacto</string>
-    <string name="delete_contact_message">¿Estás seguro de que quieres eliminar el contacto</string>
-    <string name="delete">Eliminar</string>
-    <string name="successfully_contact_deleted">Contacto eliminado con éxito</string>
-    <string name="failed_contact_deleted">Error al eliminar el contacto</string>
-    <string name="instructions_delete">Deslizar a la derecha para eliminar contacto</string>
-    <string name="account">Cuenta</string>
-    <string name="change_password">Cambiar contraseña</string>
-    <string name="logout">Cerrar sesión</string>
-    <string name="danger_zone">Zona de peligro</string>
-    <string name="delete_account">Eliminar cuenta</string>
-    <string name="delete_account_confirmation">¿Estás seguro de que quieres eliminar tu cuenta? Esta acción es irreversible y se eliminarán todos tus datos.\nEscribe \"Borrar mi cuenta\" para eliminar.</string>
-    <string name="successfully_account_deleted">Cuenta eliminada correctamente</string>
-    <string name="failed_account_deleted">Error al eliminar la cuenta</string>
-    <string name="app_version">Versión %s</string>
-    <string name="app_version_format">Versión %s</string>
-    <string name="delete_account_type_confirmation">Escribe la confirmación</string>
-    <string name="delete_account_confirmation_phrase">Borrar mi cuenta</string>
-    <string name="delete_account_confirmation_error">La frase no coincide. Por favor, escribe exactamente \"Borrar mi cuenta\"</string>
-    <string name="current_password_hint">Contraseña actual</string>
-    <string name="new_password_hint">Nueva contraseña</string>
-    <string name="repeat_new_password_hint">Repetir nueva contraseña</string>
-    <string name="change">Cambiar</string>
-    <string name="current_password_empty">La contraseña actual es obligatoria</string>
-    <string name="incorrect_password">Contraseña incorrecta</string>
-    <string name="successfully_password_changed">Contraseña cambiada correctamente</string>
-    <string name="failed_password_changed">Error al cambiar la contraseña</string>
-    <string name="user_not_found">Usuario no encontrado</string>
-    <string name="continue_as_guest">Continuar como invitado</string>
-    <string name="guest_personal_contacts_title">Cuenta requerida</string>
-    <string name="guest_personal_contacts_message">Para añadir y gestionar tus contactos personales de emergencia, necesitas crear una cuenta o iniciar sesión.\n\n¡Es rápido y gratuito!</string>
-    <string name="guest_mode_title">Modo invitado</string>
-    <string name="guest_mode_message">Estás navegando como invitado. Puedes ver los contactos de emergencia predeterminados, pero para acceder a todas las funcionalidades necesitas una cuenta.</string>
-    <string name="exit_guest_mode">Salir del modo invitado</string>
-    <string name="edit_contact">Editar contacto</string>
-    <string name="update">Actualizar</string>
-    <string name="successful_contact_updated">Contacto actualizado correctamente</string>
-    <string name="failed_contact_updated">Error al actualizar contacto</string>
-    <string name="instructions_update">Mantener pulsado para actualizar contacto</string>
+    <string name="welcome">Welcome!</string>
+    <string name="login">Log In</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="repeat_password_hint">Repeat password</string>
+    <string name="account_question">Don\'t have an account yet?</string>
+    <string name="create_account">Create Account</string>
+    <string name="email_content_description">Field to enter email</string>
+    <string name="password_content_description">Field to enter password</string>
+    <string name="repeat_password_content_description">Field to confirm password</string>
+    <string name="two_empty_fields">Both fields must be filled out</string>
+    <string name="three_empty_fields">All 3 required fields must be filled out</string>
+    <string name="email_empty">The email field is empty</string>
+    <string name="password_empty">The password field is empty</string>
+    <string name="repeat_password_empty">The confirm password field is empty</string>
+    <string name="successful_login">Login successful</string>
+    <string name="failed_login">Authentication error</string>
+    <string name="register_title">Register</string>
+    <string name="register">Register</string>
+    <string name="invalid_email">Invalid email</string>
+    <string name="short_password">Password must be at least 6 characters</string>
+    <string name="unmatched_password">Passwords do not match</string>
+    <string name="successful_register">User registered successfully</string>
+    <string name="email_in_use">This email is already registered</string>
+    <string name="failed_register">Registration error: </string>
+    <string name="contacts">Contacts</string>
+    <string name="personal_contacts">Personal</string>
+    <string name="others">More</string>
+    <string name="call_confirmation_title">Confirm call</string>
+    <string name="call_question">Are you sure you want to call</string>
+    <string name="accept_call">Call</string>
+    <string name="cancel_call">Cancel</string>
+    <string name="add_contact">Add contact</string>
+    <string name="name_required">Name is required</string>
+    <string name="number_required">Phone number is required</string>
+    <string name="successful_contact_added">Contact added successfully</string>
+    <string name="failed_contact_added">Failed to add contact</string>
+    <string name="add_new_contact">Add new contact</string>
+    <string name="contact_name">Contact Name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="image_url_optional">Image URL (Optional)</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="error_loading_contacts">Error loading contacts</string>
+    <string name="delete_contact_title">Delete contact</string>
+    <string name="delete_contact_message">Are you sure you want to delete the contact</string>
+    <string name="delete">Delete</string>
+    <string name="successfully_contact_deleted">Contact deleted successfully</string>
+    <string name="failed_contact_deleted">Error deleting contact</string>
+    <string name="instructions_delete">Swipe right to delete contact</string>
+    <string name="account">Account</string>
+    <string name="change_password">Change password</string>
+    <string name="logout">Log out</string>
+    <string name="danger_zone">Danger zone</string>
+    <string name="delete_account">Delete account</string>
+    <string name="delete_account_confirmation">Are you sure you want to delete your account? This action is irreversible and all your data will be deleted.\nType \"Delete my account\" to delete.</string>
+    <string name="successfully_account_deleted">Account successfully deleted</string>
+    <string name="failed_account_deleted">Failed to delete account</string>
+    <string name="app_version">Version %s</string>
+    <string name="app_version_format">Version %s</string>
+    <string name="delete_account_type_confirmation">Type confirmation</string>
+    <string name="delete_account_confirmation_phrase">Delete my account</string>
+    <string name="delete_account_confirmation_error">Phrase doesn\'t match. Please type exactly \"Delete my account\"</string>
+    <string name="current_password_hint">Current password</string>
+    <string name="new_password_hint">New password</string>
+    <string name="repeat_new_password_hint">Confirm new password</string>
+    <string name="change">Change</string>
+    <string name="current_password_empty">Current password is required</string>
+    <string name="incorrect_password">Incorrect password</string>
+    <string name="successfully_password_changed">Password successfully changed</string>
+    <string name="failed_password_changed">Failed to change password</string>
+    <string name="user_not_found">User not found</string>
+    <string name="continue_as_guest">Continue as guest</string>
+    <string name="guest_personal_contacts_title">Account required</string>
+    <string name="guest_personal_contacts_message">To add and manage your personal emergency contacts, you need to create an account or sign in.\n\nIt\'s quick and free!</string>
+    <string name="guest_mode_title">Guest mode</string>
+    <string name="guest_mode_message">You are browsing as a guest. You can view the default emergency contacts, but to access all features you need an account.</string>
+    <string name="exit_guest_mode">Exit guest mode</string>
+    <string name="edit_contact">Edit contact</string>
+    <string name="update">Update</string>
+    <string name="successful_contact_updated">Contact updated successfully</string>
+    <string name="failed_contact_updated">Failed to update contact</string>
+    <string name="instructions_update">Long press to update contact</string>
 </resources>
